# BlueNoiseSampling

./: README.md
12-Zhou-general spectrum noise/: Readme
12-bnot/: Blue Noise through Optimal Transport.webarchive  ours_ramp.dat.mpg
14-Fast Tile-Based Adaptive Sampling with User-Specified Fourier Spectrasampler-master/: Fast Tile-Based Adaptive Sampling with User-Specified Fourier Spectra.webarchive
15-stk-master/: Variance Analysis for Monte Carlo Integration.webarchive
16-EmpiricalErrorAnalysis-master/: Fourier analysis of numerical integration in Monte Carlo rendering: theory and practice.webarchive
16-ldbncode/: Low-Discrepancy Blue Noise Sampling.webarchive  algorithm2.cpp  ldbn.cpp  t128-m16-BNOT.pgm  t128-m16-Step.pgm
18-BNLD_UTK/: BNLDLut.hpp  BNLDSampler.hpp  BNLD_main.cpp  CMakeLists.txt  IncrOwen_main.cpp  IncrementalOwen.hpp  Pointset.hpp  README.txt  Sequences with Low-Discrepancy Blue-Noise 2-D Projections.webarchive  SobolSampler.hpp  cat_files.sh
19-samplerCPP/: A Low-Discrepancy Sampler that Distributes Monte Carlo Errors as a Blue Noise in Screen Space.webarchive  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_128spp.cpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_16spp.cpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_1spp.cpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_256spp.cpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_2spp.cpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_32spp.cpp  (+3 more)
20-Sots/: CMakeLists.txt  (+3 more)
(+37 files in other folders)
